<resources>
    <string name="status">status</string>
    <string name="reply">reply</string>
    <string name="replyall">replyAll</string>
    <string name="tweet_sent">Tweet sent</string>
    <string name="dent_sent">Dent sent</string>
    <string name="direct_message_sent">Direct message sent</string>
    <string name="hello">Enter your tweet text below:</string>
    <string name="app_name">Zwitscher</string>
    <string name="no_connect">Can not connect to server</string>
    <string name="TweetButton">Tweet this!</string>
    <string name="ClearButton">Clear!</string>
    <string name="home_timeline">Home</string>
    <string name="classicretweet">Classic Retweet</string>
    <string name="list">Lists</string>
    <string name="direct">Directs</string>
    <string name="mentions">Mentions</string>
    <string name="searches">Searches</string>
    <string name="location">Location:</string>
    <string name="geo">Geo?</string>
    <string name="web">Web:</string>
    <string name="tweet_count">Tweet count:</string>
    <string name="follower_count">Follower count:</string>
    <string name="following_count">Following count:</string>
    <string name="listed_count">Listed count:</string>
    <string name="resent_by"> resent by </string>
    <string name="in_reply_to"> in reply to </string>
    <string name="via">" via "</string>
    <string name="send_direct_to">Sending direct message to </string>
    <string name="getting_statuses">Getting %ss …</string>
    <string name="getting_conversation">Getting conversation</string>
    <string name="follow_user">Follow user</string>
    <string name="unfollow_user">Unfollow user</string>
    <string name="from">from</string>
    <string name="get_user_detail">Getting user details …</string>
    <string name="get_preview">"Loading previews…"</string>
    <string name="From">From</string>
    <string name="to">to</string>
    <string name="please_sync_lists">Please sync lists</string>
    <string name="no_searches_found">No saved searches found - do you need to sync?</string>
    <string name="updating">Updating</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="service">Service</string>
    <string name="new_mentions">new mentions</string>
    <string name="new_directs">new direct messages</string>
    <string name="copy_and_paste">You can copy and paste the message to re-try.</string>
    <string name="user">User</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sent">Sent</string>
    <string name="favorites">Favorites</string>
    <string name="prefs_location_enabled">Location enabled</string>
    <string name="prefs_location_enabled_descr">Shall Zwitscher add location to status updates?</string>
    <string name="prefs_filter">Filter</string>
    <string name="prefs_filter_descr">Provide Expressions to filter tweets</string>
    <string name="prefs_min_old">Min old tweets</string>
    <string name="prefs_min_old_descr">Minumum of old tweets to display after a reload with new tweets</string>
    <string name="prefs_max_old">Default old tweets</string>
    <string name="prefs_max_old_descr">Number of old tweets to display when there are no new tweets on the server</string>
    <string name="prefs_pic_loading">Picture loading</string>
    <string name="prefs_pic_loading_descr">Network configuration required for picture loading</string>
    <string name="prefs_pic_roaming">Roaming (pictures)</string>
    <string name="prefs_pic_roaming_descr">Allow downloading images when Roaming</string>
    <string name="prefs_pictureService">Picture Service</string>
    <string name="prefs_pictureService_descr">Choose a service for picture uploading</string>
    <string name="prefs_extra_loading">Loading of additional timelines</string>
    <string name="prefs_extra_loading_descr">Network configuration required to load additional timelines (when on the home timeline)</string>
    <string name="prefs_extra_roaming">Roaming (timelines)</string>
    <string name="prefs_extra_roaming_descr">Allow load of additional timelines when roaming?</string>
    <string name="help">Help</string>
    <string name="help_common">This page shows all the icons used with in Zwitscher</string>
    <string name="help_add_list">Add the user to a list</string>
    <string name="help_back_button">Go back to the previous page</string>
    <string name="help_camera">Take a picture with the camera. See preferences for picture upload services.</string>
    <string name="help_direct_button">Send the message via mail</string>
    <string name="help_favorite">Add/remove the status as/from favorite(s)</string>
    <string name="help_post_button">Write new message</string>
    <string name="help_reload_button">Reload the timeline (from the server)</string>
    <string name="help_reply_button">Reply to the current status</string>
    <string name="help_reply_all_button">Reply to the current status with all users listed in the message</string>
    <string name="help_rt_button">Retweet the current status</string>
    <string name="help_rt_button_cl">Classical retweet of the current status</string>
    <string name="help_speaker">Speak the current status message</string>
    <string name="help_threads">Show the conversation this thread is involved in</string>
    <string name="help_to_top">Jump to top of the list</string>
    <string name="help_translate">Translate the current status</string>
    <string name="help_user_unknown">No picture for the user loaded</string>
    <string name="help_select_user">Select a user</string>
    <string name="help_more">To learn more, go to http://bsd.de/zwitscher . To report bugs, write feature requests or browse the source, go to https://github.com/pilhuhn/ZwitscherA . There is also help in the Wiki at https://github.com/pilhuhn/ZwitscherA/wiki/Help</string>
    <string name="select_account_select">Please select the account</string>
    <string name="select_account_pick">Switch account</string>
    <string name="select_account_new">Add account</string>
    <string name="new_account_create_title">Create account</string>
    <string name="new_account_switch">Switch to new</string>
    <string name="new_account_create">Create!</string>
    <string name="menu_switch_account">Accounts…</string>
    <string name="select_account_delete">Delete Account…</string>
    <string name="really_delete">Really delete</string>
    <string name="menu_clean_statuses">Clean up Statuses</string>
    <string name="search_hint">Search messages</string>
    <string name="wrote">wrote</string>
    <string name="message_from_zwitscher">Message from Zwitscher</string>
    <string name="click_here">&lt;--- press here</string>
    <string name="read_it_later_enable">Enable support for Pocket(ReadItLater)</string>
    <string name="read_it_later_username">Username</string>
    <string name="read_it_later_password">Password</string>
    <string name="read_it_later_support">Support for Pocket(ReadItLater)</string>
    <string name="ril">Read later</string>
    <string name="unset">Unset</string>
    <string name="set">Set</string>
    <string name="invalid">Invalid</string>
    <string name="wantToRemove">Are you sure you want to remove [%s] ?</string>
    <string name="addFilterExpression">Add filter expr.</string>
    <string name="refresh">Refresh</string>
    <string name="pickUser">Pick User</string>
    <string name="viewOnWeb">View on Web</string>
    <string name="usersTweets">User\'s tweets</string>
    <string name="retweet">Retweet</string>
    <string name="show_thread">Thread</string>
    <string name="translate">Translate…</string>
    <string name="forward">Forward</string>
    <string name="speak">Read out loud</string>
    <string name="favorite">Favorite</string>
    <string name="logging_in">Logging in…</string>
    <string name="new_message">New Msg</string>
    <string name="take_picture_via">Take picture via:</string>
    <string name="take_image_small">Take small image</string>
    <string name="take_image_large">Take large image</string>
    <string name="from_gallery">Select from Gallery</string>
    <string name="ShortenUrls">Shorten urls</string>
    <string name="report_as_spammer">Report spammer…</string>
    <string name="failed_to_load_user_info">Failed to load user details</string>
    <string name="url_shortening_failed">URL shortening failed: [%s]</string>
    <string name="trying_to_send">Trying to send …</string>
    <string name="picture_attached">Image attached</string>
    <string name="give_feedback">Give feedback…</string>
    <string name="give_feedback_short">Feedback…</string>
    <string name="report_as_spammer_really">Do you really want to report [%s] as spammer?</string>
    <string name="goto_user">Got to user</string>
    <string name="goto_user_short">To user</string>
    <string name="cancel">Cancel</string>
    <string name="Reply">Reply</string>
    <string name="user_image">User image</string>
    <string name="Reply_all">Reply All</string>
    <string name="thread">Thread</string>
    <string name="send">Send</string>
    <string name="Done">Done!</string>
    <string name="ril_button">RIL</string>
    <string name="bio">Bio:</string>
    <string name="Translate">Translate</string>
    <string name="Direct">Direct</string>
    <string name="screen_name">screen name</string>
    <string name="screen_name_overview">Name display</string>
    <string name="prefs_screen_name_overview">How to display names in the timeline (a change will only be active after a timeline reload)</string>
    <string name="Preferences">Preferences</string>
    <string name="add_to_list">Manage lists…</string>
    <string name="query_is">Query is</string>
    <string name="no_items_found">No items found</string>
    <string name="queueing">Queued for later sending</string>
    <string name="queueing_code">Server seems down or overloaded, queued for later sending. [%s]</string>
    <string name="update_not_yet_supported">Update type %s not supported yet</string>
    <string name="pick_a_user">Pick a user</string>
    <string name="no_ril_user">No user/password for Pocket(ReadItLater) given</string>
    <string name="error_nothing_provided">-nothing provided-</string>
    <string name="account_not_valid">Account is not valid</string>
    <string name="login_failed">Login failed</string>
    <string name="invalid_filter">Filter expression is invalid - not filtering (%s)</string>
    <string name="invalid_list_item">Entry [%s] is invalid, rejecting</string>
    <string name="prefs_keep_images">Keep images after post</string>
    <string name="prefs_keep_images_long">Should images be kept on SD card after successful submit with a new status
    </string>
  <string name="show_on_web">Show on web…</string>
  <string name="delete_status">Delete status…</string>
  <string name="delete_status_really">Really delete status?</string>
  <string name="no_result">Got no result from the server</string>
  <string name="account_add">Add account…</string>
  <string name="account_remove">Remove selected account…</string>
  <string name="offline_turn_on_networking">You seem to be offline. Please turn on networking and come back.</string>
  <string name="ok">OK</string>
  <string name="continue_msg">Continue…</string>
  <string name="picture_of_user">Picture of the user</string>
  <string name="server_base_url">Server base URL</string>
  <string name="logo_description">Zwitscher logo</string>
  <string name="done_description">Back to previous screen</string>
  <string name="clear_description">Clear input field</string>
  <string name="added">Added</string>
  <string name="removed">Removed</string>
  <string name="follow_unfollow_set">Follow/Unfollow set</string>
  <string name="status_deleted">Status deleted</string>
  <string name="load_on_switch">Load on account switch</string>
</resources>