<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/direct"
          android:icon="@drawable/direct_button"
          android:title="@string/direct"
          android:showAsAction="ifRoom|withText"
          />
    <item android:id="@+id/reply"
          android:icon="@drawable/reply_button"
          android:showAsAction="always|withText"
          android:title="@string/reply"
          />
    <item android:id="@+id/thread"
          android:icon="@drawable/threads"
          android:title="@string/show_thread"
          android:showAsAction="always"
          />
    <item android:id="@+id/retweet"
          android:icon="@drawable/rt_button_cl"
          android:showAsAction="always|withText"
          android:title="@string/retweet"
          />


    <item android:id="@+id/replyAll"
          android:icon="@drawable/reply_all_button"
          android:title="@string/replyall"
          />

    <item android:id="@+id/cl_retweet"
          android:title="@string/classicretweet"
          />

    <item android:id="@+id/favorite"
          android:icon="@drawable/favorite_off"
          android:title="@string/favorite"
          />

    <item android:id="@+id/translate"
          android:icon="@drawable/translate"
          android:title="@string/translate"
          />

    <item android:title="@string/forward"
          android:id="@+id/forward"
          />

    <item android:title="@string/speak"
          android:id="@+id/speak"
          />

    <item android:id="@+id/ril"
          android:title="@string/ril"
          />

    <item android:id="@+id/report_as_spam"
          android:title="@string/report_as_spammer"
          />

  <item android:id="@+id/show_on_web"
    android:title="@string/show_on_web"
    />

</menu>