<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/cl_retweet"
          android:title="@string/classicretweet"
          />
    <item android:id="@+id/direct"
          android:icon="@drawable/direct_button"
          android:title="@string/direct"
          />

    <item android:title="@string/speak"
          android:id="@+id/speak"
          android:icon="@drawable/speaker"
          />

    <item android:id="@+id/ril"
          android:title="@string/ril"
          />

    <item android:title="@string/forward"
          android:id="@+id/forward"
          />
    <item android:id="@+id/report_as_spam"
          android:title="@string/report_as_spammer"
          />
  <item android:id="@+id/show_on_web"
    android:title="@string/show_on_web"
    />

  <item android:id="@+id/delete"
    android:title="@string/delete_status"
    android:icon="@drawable/ic_menu_delete"
    />

</menu>