<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
        >

    <LinearLayout
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:orientation="vertical"
            >
        <TextView android:id="@+id/help_common"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/help_common"
                  />

        <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:shrinkColumns="1"
                >
            <TableRow>
                <ImageView
                        android:src="@drawable/add_list"
                        style="@style/helpIcon"

                        />
                <TextView
                        android:text="@string/help_add_list"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/back_button"
                        android:background="@android:color/darker_gray"
                        />
                <TextView
                        android:text="@string/help_back_button"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/camera"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_camera"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/direct_button"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_direct_button"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/favorite_off"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_favorite"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/post_button"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_post_button"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/reload_button"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_reload_button"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/reply_button"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_reply_button"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/reply_all_button"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_reply_all_button"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/rt_button"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_rt_button"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/rt_button_cl"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_rt_button_cl"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/speaker"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_speaker"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/threads"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_threads"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/to_top_button"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_to_top"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/translate"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_translate"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/user_unknown"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_user_unknown"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                        android:src="@drawable/select_user"
                        style="@style/helpIcon"
                        />
                <TextView
                        android:text="@string/help_select_user"
                    />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</ScrollView>