<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

    <TextView android:id="@+id/UserName"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textSize="16dp"
              />

    <ImageView android:layout_width="80px"
                android:layout_height="80px"
                android:src="@drawable/user_unknown"
                android:scaleType="fitXY"
                android:padding="4px"
                android:id="@+id/UserPictureImageView"/>


    <TableLayout android:id="@+id/user_table_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:shrinkColumns="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            >
        <TableRow>
            <TextView android:text="@string/location"
                      android:layout_gravity="left"
                    />
            <TextView android:id="@+id/userDetail_location"
                      style="@style/helpText"
                    />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/web"
                      android:layout_gravity="left"
                    />
            <TextView android:id="@+id/userDetail_web"
                      android:autoLink="web"
                      style="@style/helpText"
                    />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/bio"
                      android:layout_gravity="left"
                    />
            <TextView android:id="@+id/userDetail_bio"
                      style="@style/helpText"
                    />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/tweet_count"
                      android:layout_gravity="left"
                    />
            <TextView android:id="@+id/userDetail_tweetCount"
                      style="@style/helpText"
                    />
        </TableRow>
        <TableRow>

            <TextView android:text="@string/follower_count"
                      android:layout_gravity="left"
                    />
            <TextView android:id="@+id/userDetail_followerCount"
                      style="@style/helpText"
                    />
        </TableRow>
        <TableRow>

            <TextView android:text="@string/following_count"
                      android:layout_gravity="left"
                    />
            <TextView android:id="@+id/userDetail_followingCount"
                      style="@style/helpText"
                    />
        </TableRow>
        <TableRow>

            <TextView android:text="@string/listed_count"
                      android:layout_gravity="left"
                    />
            <TextView android:id="@+id/userDetail_listedCount"
                      style="@style/helpText"
                    />
        </TableRow>
    </TableLayout>
</LinearLayout>