<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/AccountSelectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_account_select"
            />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showAccounts"
            android:text="@string/select_account_pick"
            />

    <Button
            android:id="@+id/NewAccountButton"
            android:text="@string/select_account_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="newAccount"
            />

</LinearLayout>
